--- a/massa/index.html
+++ b/massa/index.html
@@ -5,66 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap">
+
 </head>
 <body>
-    conteúdo
-    <em>itálico</em>
+    <header>
+        <div class="logo">
+            <img src="images/logo.png" alt="logo">
+        </div>
+        <div class="sign-in">
+            <form action="#">
+                <input type="email" placeholder="Email" id="">
+                <input type="password" name="" id="" placeholder="Senha">
 
-    <strong>negrito</strong>
+                <button type="submit" class="button primary">Entrar</button>
+            </form>
+        </div>
+    </header>
 
-    <article>
-        <h1>Título</h1>
-        <p>Parágrafo</p>
-    </article>
+    <main>
+        <section class="intro gray">
+            <div class="container">
+                <div class="hero">
+                    <h1>
+                        Ajudamos <strong>programadores</strong> a conseguirem seus 
+                        <strong>primeiros empregos</strong>
+                    </h1>
+        
+                    <p>Mais de 100 mil desenvolvedores já conseguiram o seu primeiro emprego usando nossa plataforma</p>
+        
+                    <div class="cta">
+                        <a href="#" class="button primary">Sou programador</a>
+                        <a href="#" class="button secondary">Somos empresa contratando</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="languages">
+            <div class="container">
+                <h1 class="title">Linguagens</h1>
+                <div class="cards">
+                    <div class="card red">Ruby</div>
+                    <div class="card blue">JavaScript</div>
+                    <div class="card purple">Elixir</div>
+                    <div class="card yellow">Python</div>
+                    <div class="card green">Go</div>
+                </div>
+            </div>
+        </section>
 
-    <ul>
-        <li>Primeiro Item</li>
-        <li>Segundo Item</li>
-        <li>Terceiro Item</li>
-    </ul>
+        <section class="team gray">
+            <div class="container">
+                <h1 class="title">Nosso Time</h1>
+                <div class="members">
+                    <div class="member"><img src="images/team/walter.jpg" alt=""></div>
+                    <div class="member"><img src="images/team/jesse.jpg" alt=""></div>
+                    <div class="member"><img src="images/team/skyler.jpg" alt=""></div>
+                    <div class="member"><img src="images/team/hank.jpg" alt=""></div>
+                    <div class="member"><img src="images/team/gus.jpg" alt=""></div>
+                    <div class="member"><img src="images/team/mike.jpg" alt=""></div>
+                    <div class="member"><img src="images/team/saul.jpg" alt=""></div>
+                </div>
+            <div>
+        </section>
 
-    <table border=1>
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Amanda Varella</td>
-                <td>amandavarella@gmail.com</td>
-            </tr>
-            <tr>
-                    <td>Bob</td>
-                    <td>bob@gmail.com</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <br><br>
-
-    <form action="">
-        <label>Nome</label>
-        <input type="text" name="" id="">
-        <br><br>
-
-        <label>Email</label>
-        <input type="email" placeholder="example@email.com">
-        <br><br>
-
-        <label>Senha</label>
-        <input type="password">
-        <br><br>
-
-        <select>
-            <option value="1-18">1-18</option>
-            <option value="19-35">19-35</option>
-        </select>
-        <br><br>
+    </main>
 
 
-        <button type="submit">Enviar</button>
-    </form>
+    <footer class="footer">
+        <div class="container">
+            <ul>
+                <li><a href="#">Política de Privacidade</a></li>
+                <li><a href="#">Carreira</a></li>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">YouTube</a></li>
+                <li><a href="#">Facebook</a></li>
+            </ul>
+            <p class="copyright">© Massa. Todos os direitos reservados. </p>
+        </div> 
+    </footer>
 </body>
 </html>
